SIP2-242: Skip null barcodes in PatronInformation response (#226)